WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108674
REGRESSION (
r141281
): Navigating to this HTTP Live Streaming (application/vnd.apple.mpegurl) URL downloads a file instead of playing it in the browser
https://bugs.webkit.org/show_bug.cgi?id=108674
Summary
REGRESSION (r141281): Navigating to this HTTP Live Streaming (application/vnd...
Jer Noble
Reported
2013-02-01 12:18:54 PST
REGRESSION (
r141281
): Navigating to this HTTP Live Streaming (application/vnd.apple.mpegurl) URL downloads a file instead of playing it in the browser
Attachments
Patch
(2.77 KB, patch)
2013-02-01 12:22 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(2.80 KB, patch)
2013-02-01 12:29 PST
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-02-01 12:22:55 PST
Created
attachment 186101
[details]
Patch
Jer Noble
Comment 2
2013-02-01 12:23:53 PST
<
rdar://problem/13133595
>
Jer Noble
Comment 3
2013-02-01 12:29:30 PST
Created
attachment 186102
[details]
Patch Swapped order of src,dest in concatenateHashSets.
Jer Noble
Comment 4
2013-02-01 12:46:05 PST
Committed
r141630
: <
http://trac.webkit.org/changeset/141630
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug